--- a/src/Manassa/Windows/AnalysisRunningControl.xaml
+++ b/src/Manassa/Windows/AnalysisRunningControl.xaml
@@ -14,18 +14,38 @@
     </UserControl.Resources>
 
     <Grid>
-        <Grid.RowDefinitions>            
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="38"/>
             <RowDefinition/>
-            <RowDefinition Height="40"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
-
-        <TabControl
-            Grid.Row="0"            
+        <Label
+            FontSize="20"
             >
+            Running Analysis...
+        </Label>
+            <TabControl
+            Grid.Row="2"            
+            >
+            <TabItem
+                Header="Messages"
+                Style="{DynamicResource ResourceKey=SimpleTabItem}">
+                <ScrollViewer
+                    VerticalAlignment="Stretch"
+                    VerticalContentAlignment="Stretch"
+                    >
+                    <ListBox
+                        x:Name="messagesBox"
+                        ItemsSource="{Binding Path=Messages}"
+                        >
+
+                    </ListBox>
+                </ScrollViewer>
+            </TabItem>
             <TabItem
                 Header="Gallery"
                 Style="{DynamicResource ResourceKey=SimpleTabItem}">
@@ -36,20 +56,7 @@
                 </WrapPanel>
             </TabItem>
 
-            <TabItem
-                Header="Messages"
-                Style="{DynamicResource ResourceKey=SimpleTabItem}">
-                <ScrollViewer
-                    VerticalAlignment="Stretch"
-                    VerticalContentAlignment="Stretch"
-                    >
-                    <ListBox
-                        ItemsSource="{Binding Path=Messages}"
-                        >
-                    
-                    </ListBox>
-                </ScrollViewer>
-            </TabItem>
+            
         </TabControl>        
 
         <Label                         
@@ -59,7 +66,7 @@
             Content="{Binding Path=CurrentStatusMessage}" />            
         <Button            
             Style="{DynamicResource ResourceKey=SimpleButtonStyle}"                            
-            Grid.Row="2"
+            Grid.Row="3"
             Grid.Column="0"
             Height="32"
             Width="128"
