--- a/src/Manassa/Windows/AnalysisRunningControl.xaml
+++ b/src/Manassa/Windows/AnalysisRunningControl.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:maConverters="clr-namespace:Manassa.Converters"
-        xmlns:ui="clr-namespace:Manassa.Windows" mc:Ignorable="d" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" d:DesignHeight="330" d:DesignWidth="615">
+        xmlns:ui="clr-namespace:Manassa.Windows" mc:Ignorable="d" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" d:DesignHeight="574" d:DesignWidth="761">
     <UserControl.Resources>
         <maConverters:DatasetCountConverter     x:Key="DatasetCountConverter" />
         <maConverters:DatasetSelectedConverter  x:Key="DatasetSelectedConverter" />
@@ -16,54 +16,87 @@
     <Grid>
         <Grid.RowDefinitions>            
             <RowDefinition Height="38"/>
+            <RowDefinition Height="65*"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition />
+            <RowDefinition Height="35*"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition />
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>     
-        <Label                         
+        </Grid.RowDefinitions>    
+        <Grid
             Grid.Row="0"
-            Grid.Column="0"
-            Content="{Binding Path=CurrentStatusMessage}" />
-
-        <Label
-            Grid.Row="1">
-            Messages
-        </Label>
-        <ScrollViewer
-            Grid.Row="2"
-            VerticalAlignment="Stretch"
-            VerticalContentAlignment="Stretch"
             >
-            <ListBox
-                x:Name="messagesBox"
-                ItemsSource="{Binding Path=Messages}">
-            </ListBox>
-        </ScrollViewer>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Button            
+                Style="{DynamicResource ResourceKey=SimpleButtonStyle}"                            
+                Grid.Row="0"
+                Grid.Column="1"
+                Height="32"
+                Width="128"
+                Margin="5,5,5,5"
+                HorizontalAlignment="Left"
+                Content="Cancel" 
+                Click="Button_Click" />
+        </Grid>
+
+        <Border
+            BorderBrush="LightGray"
+            BorderThickness="5"
+            Padding="2"
+            Margin="5"
+            Grid.Row="3">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <ScrollViewer                    
+                    Grid.Row="1"
+                    Margin="5"
+                    VerticalAlignment="Stretch"
+                    VerticalContentAlignment="Stretch"
+                    >
+                    <ListBox
+                        x:Name="messagesBox"
+                        ItemsSource="{Binding Path=Messages}">
+                    </ListBox>
+                </ScrollViewer>
+            </Grid>
+        </Border>
         <GridSplitter
             Height="4"
             Background="Gray"
             HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch"           
-            Grid.Row="3"
+            Grid.Row="2"
             >            
         </GridSplitter>
-        <ListBox 
-                Grid.Column="0"
-                Grid.Row="4"
-                ItemsSource="{Binding Path=GalleryImages}">            
-        </ListBox>
-        <Button            
-            Style="{DynamicResource ResourceKey=SimpleButtonStyle}"                            
-            Grid.Row="5"
-            Grid.ColumnSpan="2"
+        <Border
+            BorderBrush="LightGray"
+            BorderThickness="5"
+            Padding="2"
+            Margin="5"
             Grid.Column="0"
-            Height="32"
-            Width="128"
-            Margin="5,5,5,5"
-            HorizontalAlignment="Left"
-            Content="Cancel"            
-            IsEnabled="False"/>                
+            Grid.Row="1">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <Label
+                    Grid.Row="0"
+                    Foreground="LightGray"
+                    HorizontalContentAlignment="Center">
+                    Gallery</Label>
+                <ScrollViewer
+                    Grid.Row="1"
+                    x:Name="GalleryScroll">                            
+                    <ListBox 
+                            ItemsSource="{Binding Path=GalleryImages}">            
+                    </ListBox>
+                </ScrollViewer>
+            </Grid>
+        </Border>
     </Grid>
 </UserControl>
